k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: react-ecs
  labels:
    name: react-ecs
