k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-ecs-service
  namespace: react-ecs
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: react-ecs
  type: NodePort
